// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chatbox Chatbox component work 1`] = `
<div
  class="ant-chatbox ant-chatbox-start"
>
  <div
    class="ant-chatbox-content"
  >
    test
  </div>
</div>
`;

exports[`chatbox rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-chatbox ant-chatbox-start ant-chatbox-rtl"
>
  <div
    class="ant-chatbox-content"
  >
    test
  </div>
</div>
`;
